<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VotingApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search people</string>
    <string name="search">Search</string>
    <string name="action_logout">Log out</string>
    <string name="action_change_password">Change password </string>
    <string name="username">Username</string>
    <string name="pp">Profile Picture</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="oldpassword">Current password</string>
    <string name="newpassword">New password</string>
    <string name="change">Change</string>
    <string name="signin">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="title_activity_register">Create new account</string>
    <string name="showPassword">Show Password</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_menu">Home</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="more">More</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="createVote">Create vote</string>
    <string name="title_activity_create_vote">CreateVoteActivity</string>
    <string name="question">Question</string>
    <string name="questions">Questions</string>
    <string name="enterQuestion">Enter the question</string>
    <string name="post">Post</string>
    <string name="multiple">Multiple</string>
    <string name="single">Single</string>
    <string name="add">Add</string>
    <string name="addAnswer">Add Answer</string>
    <string name="enterAnswer">Enter Answer</string>
    <string name="answers">Answers</string>
    <string name="submit">Submit</string>
    <string name="title_activity_vote_result">VoteResultActivity</string>
    <string name="settime">Set End Time</string>
    <string name="create_group">Create group</string>
    <string name="postpone">Edit end time</string>
    <string name="publicc">Public</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="accounts">Accounts</string>
    <string name="only_me">Only me</string>
    <string name="anyone">Anyone</string>
    <string name="group_name">Group Name</string>
    <string name="title_activity_group_view">GroupViewActivity</string>
    <string name="change_server">Change Server</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="ipAddress">Server IP address</string>
    <string name="portNumber">Server port number</string>
    <string name="connect">Connect</string>
    
    <string name="reset">Reset</string>
    
    <string name="deleteVotes">Delete all votes</string>
    <string name="deleteGroups">Delete all groups</string>


</resources>