<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@+id/search"/>
    <item
        android:id="@+id/profile"
        android:contentDescription="@string/pp"
        android:duplicateParentState="true"
        android:scaleType="fitXY"
        android:showAsAction="always"
        android:title=""/>
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_action_refresh"
                android:showAsAction="never"
                android:title="@string/action_logout"/>
            <item
                android:id="@+id/action_change_password"
                android:icon="@drawable/ic_action_accounts"
                android:showAsAction="never"
                android:title="@string/action_change_password"/>
            <item
                android:id="@+id/create_group"
                android:icon="@drawable/ic_action_add_group"
                android:showAsAction="never"
                android:title="@string/create_group"/>
            <item
                android:id="@+id/change_server"
                android:icon="@drawable/ic_action_cloud"
                android:showAsAction="never"
                android:title="@string/change_server"/>
            <item
                android:id="@+id/reset"
                android:icon="@drawable/ic_action_cloud"
                android:showAsAction="never"
                android:title="@string/reset"/>
        </menu>
    </item>

</menu>